--- a/src/i18n/messages/fr/index.json
+++ b/src/i18n/messages/fr/index.json
@@ -3,7 +3,17 @@
     "title": "Starter Multilingue Next.js",
     "description": "Un starter Next.js 15 avec Tailwind CSS et next-intl pour l'internationalisation",
     "welcome": "Bienvenue sur le Starter Multilingue Next.js",
-    "language": "Langue"
+    "language": "Langue",
+    "about_link": "À propos de nous",
+    "back_home": "Retour à l'accueil",
+    "about_title": "À propos d'Auriga Racing",
+    "about_description": "Auriga Racing est une application multilingue présentant les fonctionnalités d'internationalisation dans Next.js 15.",
+    "language_support": "Nous prenons en charge les langues anglaise, française et néerlandaise.",
+    "about_features": "Caractéristiques principales",
+    "feature_i18n": "Support complet d'internationalisation avec next-intl",
+    "feature_detection": "Détection automatique de la langue du système",
+    "feature_preference": "Sauvegarde des préférences linguistiques de l'utilisateur",
+    "feature_url": "Changement de langue via URL ou interface utilisateur"
   },
   "navigation": {
     "home": "Accueil",
