--- a/src/i18n/messages/nl/index.json
+++ b/src/i18n/messages/nl/index.json
@@ -3,7 +3,17 @@
     "title": "Next.js Meertalige Starter",
     "description": "Een Next.js 15 starter met Tailwind CSS en next-intl voor internationalisatie",
     "welcome": "Welkom bij de Next.js Meertalige Starter",
-    "language": "Taal"
+    "language": "Taal",
+    "about_link": "Over ons",
+    "back_home": "Terug naar home",
+    "about_title": "Over Auriga Racing",
+    "about_description": "Auriga Racing is een meertalige applicatie die internationalisatiefuncties in Next.js 15 toont.",
+    "language_support": "We ondersteunen Engels, Frans en Nederlands.",
+    "about_features": "Belangrijkste functies",
+    "feature_i18n": "Volledige internationalisatieondersteuning met next-intl",
+    "feature_detection": "Automatische systeemtaaldetectie",
+    "feature_preference": "Opslaan van taalvoorkeuren van gebruikers",
+    "feature_url": "Taal wisselen via URL of gebruikersinterface"
   },
   "navigation": {
     "home": "Home",
