--- a/src/i18n/messages/en/index.json
+++ b/src/i18n/messages/en/index.json
@@ -1,37 +1,14 @@
 {
   "app": {
-    "title": "Next.js Multilingual Starter",
-    "description": "A Next.js 15 starter with Tailwind CSS and next-intl for internationalization",
-    "welcome": "Welcome to the Next.js Multilingual Starter",
-    "language": "Language",
-    "about_link": "About Us",
-    "back_home": "Back to Home",
-    "about_title": "About Auriga Racing",
-    "about_description": "Auriga Racing is a multilingual application showcasing internationalization features in Next.js 15.",
-    "language_support": "We support English, French, and Dutch languages.",
-    "about_features": "Key Features",
-    "feature_i18n": "Full internationalization support with next-intl",
-    "feature_detection": "Automatic system language detection",
-    "feature_preference": "User language preference saving",
-    "feature_url": "Language switching via URL or UI"
+    "title": "Auriga Racing",
+    "description": "Experience the thrill of motorsport with our introductory track driving lessons and a close-knit racing simulation team."
   },
-  "navigation": {
-    "home": "Home",
-    "about": "About",
-    "contact": "Contact"
-  },
-  "pages": {
-    "home": {
-      "title": "Home",
-      "description": "This is the home page"
-    },
-    "about": {
-      "title": "About",
-      "description": "This is the about page"
-    },
-    "contact": {
-      "title": "Contact",
-      "description": "This is the contact page"
-    }
+  "hero": {
+    "title": "EXPERIENCE THE THRILL",
+    "subtitle": "OF PROFESSIONAL RACING",
+    "description": "Experience the thrill of motorsport with our introductory track driving lessons and a close-knit racing simulation team.",
+    "cta": "Book a Track Day",
+    "pitlane": "PITLANE",
+    "simracingTeam": "Simracing Team"
   }
 }
