--- a/src/i18n/messages/en/index.json
+++ b/src/i18n/messages/en/index.json
@@ -4,10 +4,10 @@
     "description": "Experience the thrill of motorsport with our introductory track driving lessons and a close-knit racing simulation team."
   },
   "hero": {
-    "title": "EXPERIENCE THE THRILL",
-    "subtitle": "OF PROFESSIONAL RACING",
+    "title": "Pushing limits",
+    "subtitle": "On track & online",
     "description": "Experience the thrill of motorsport with our introductory track driving lessons and a close-knit racing simulation team.",
-    "cta": "Book a Track Day",
+    "cta": "Join Track Day",
     "pitlane": "PITLANE",
     "simracingTeam": "Simracing Team"
   }
