Update app and hero description text for better engagement and clarity

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -1,12 +1,12 @@
 {
   "app": {
     "title": "Auriga Racing",
-    "description": "Experience the thrill of motorsport with our introductory track driving lessons and a close-knit racing simulation team."
+    "description": "Experience the thrill of motorsport with our motorsport initiations on the circuit and why not join our Simracing team?"
   },
   "hero": {
     "title": "Pushing limits",
     "subtitle": "On track & online",
-    "description": "Experience the thrill of motorsport with our introductory track driving lessons and a close-knit racing simulation team.",
+    "description": "Experience the thrill of motorsport with our motorsport initiations on the circuit and why not join our Simracing team?",
     "cta": "Join Track Day",
     "pitlane": "PITLANE",
     "simracingTeam": "Simracing Team"
