Add i18n to teams section and update team images

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -11,6 +11,30 @@
     "pitlane": "PITLANE",
     "simracingTeam": "Simracing Team"
   },
+  "teams": {
+    "title": "OUR TEAMS",
+    "description": "Auriga Racing is active across multiple disciplines, from real-world Fun Cup events to serious simracing competitions",
+    "track": {
+      "title": "Fun Cup",
+      "description": "Our track team competes in FUNCUP events across Europe, showcasing skill and precision in some of the most challenging circuits.",
+      "features": {
+        "drivers": "Professional drivers with years of experience",
+        "equipment": "State-of-the-art cars and equipment",
+        "training": "Regular trackdays and training sessions"
+      },
+      "cta": "Join Track Team"
+    },
+    "simracing": {
+      "title": "Sim racing",
+      "description": "Our sim racing division competes at a respectable level in virtual motorsports with serious engagement based on the principles and values ​​that build the team.",
+      "features": {
+        "leagues": "Compete in international e-motorsport leagues",
+        "equipment": "Professional simulation rigs and equipment",
+        "coaching": "Dedicated coaching and strategy team"
+      },
+      "cta": "Join SimRacing Team"
+    }
+  },
   "join": {
     "title": "JOIN THE TEAM",
     "description": "Whether you're an experienced racer or just starting out, we're always looking for passionate individuals to join our teams. Auriga Racing provides opportunities for both track racing and simracing enthusiasts.",
