--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -3,6 +3,15 @@
     "title": "Auriga Racing",
     "description": "Experience the thrill of motorsport with our motorsport initiations on the circuit and why not join our Simracing team?"
   },
+  "navbar": {
+    "links": {
+      "events": "Events",
+      "about": "About",
+      "teams": "Teams",
+      "gallery": "Gallery"
+    },
+    "cta": "Join Us"
+  },
   "hero": {
     "title": "Pushing limits",
     "subtitle": "On track & online",
