--- a/src/i18n/messages/nl.json
+++ b/src/i18n/messages/nl.json
@@ -3,6 +3,15 @@
     "title": "Auriga Racing",
     "description": "Experience the thrill of motorsport with our motorsport initiations on the circuit and why not join our Simracing team?"
   },
+  "navbar": {
+    "links": {
+      "events": "Evenementen",
+      "about": "Over ons",
+      "teams": "Teams",
+      "gallery": "Galerij"
+    },
+    "cta": "Doe mee"
+  },
   "hero": {
     "title": "",
     "subtitle": "VAN PROFESSIONEEL RACEN",
