Update teams section copy and fix wording in Fun Cup and SimRacing CTAs

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -22,26 +22,26 @@
   },
   "teams": {
     "title": "OUR TEAMS",
-    "description": "Auriga Racing is active across multiple disciplines, from real-world Fun Cup events to serious simracing competitions",
+    "description": "Auriga Racing is active across multiple disciplines, from real-world in Fun Cup events to serious simracing competitions",
     "track": {
       "title": "Fun Cup",
-      "description": "Our track team competes in FUNCUP events across Europe, showcasing skill and precision in some of the most challenging circuits.",
+      "description": "Our Fun Cup team competes in events across Europe, showcasing skill and precision in some of the most challenging circuits.",
       "features": {
         "drivers": "Professional drivers with years of experience",
         "equipment": "State-of-the-art cars and equipment",
         "training": "Regular trackdays and training sessions"
       },
-      "cta": "Join Track Team"
+      "cta": "Join us in trackday"
     },
     "simracing": {
       "title": "Sim racing",
-      "description": "Our sim racing division competes at a respectable level in virtual motorsports with serious engagement based on the principles and values ​​that build the team.",
+      "description": "Our Sim racing division competes at a respectable level in virtual motorsports with serious engagement based on the principles and values ​​that build the team.",
       "features": {
-        "leagues": "Compete in international e-motorsport leagues",
+        "leagues": "Compete in international iRacing leagues",
         "equipment": "Professional simulation rigs and equipment",
         "coaching": "Dedicated coaching and strategy team"
       },
-      "cta": "Join SimRacing Team"
+      "cta": "Join our Sim racing team"
     }
   },
   "join": {
