--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -178,8 +178,8 @@
     ]
   },
   "footer": {
-    "tagline": "Pushing limits on track & online.",
-    "description": "Experience the thrill of motorsport with our introductory track driving lessons and a close-knit racing simulation team.",
+    "tagline": "We are not just a racing team,",
+    "description": "we are a bunch of true passionates!",
     "logoAlt": "Auriga Racing Logo",
     "quickLinks": {
       "title": "Quick Links",
