feat: add newsletter subscription with Brevo integration

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -213,7 +213,10 @@
       "title": "Newsletter",
       "description": "Subscribe to our newsletter for the latest updates and racing news.",
       "placeholder": "Your email address",
-      "button": "Subscribe"
+      "button": "Subscribe",
+      "submitting": "Subscribing...",
+      "invalidEmail": "Please enter a valid email address",
+      "error": "Failed to subscribe. Please try again later."
     },
     "copyright": "{year} Auriga Racing. All rights reserved.",
     "legalLinks": {
