--- a/src/i18n/messages/fr.json
+++ b/src/i18n/messages/fr.json
@@ -144,7 +144,7 @@
   "events": {
     "title": "Trackdays à venir",
     "subtitle": "On track",
-    "description": "Rejoignez-nous lors de ces prochains trackdays où Auriga Racing participera.",
+    "description": "Rejoignez-nous lors de nos prochains trackdays où Auriga Racing participera.",
     "fullCalendar": "Calendrier complet des trackdays",
     "types": {
       "trackday": "Trackday",
@@ -157,7 +157,9 @@
         "date": "26 mars 2025",
         "time": "9h30 - 18h00",
         "location": "Circuit de Spa-Francorchamps, Belgique",
-        "type": "trackday"
+        "type": "trackday",
+        "track": "spa-francorchamps",
+        "country": "belgium"
       },
       {
         "id": 2,
@@ -165,7 +167,9 @@
         "date": "27 mars 2025",
         "time": "9h30 - 18h00",
         "location": "Circuit de Spa-Francorchamps, Belgique",
-        "type": "trackday"
+        "type": "trackday",
+        "track": "spa-francorchamps",
+        "country": "belgium"
       },
       {
         "id": 3,
@@ -173,7 +177,9 @@
         "date": "29 avril 2025",
         "time": "9h00 - 18h00",
         "location": "Circuit de Mettet, Belgique",
-        "type": "trackday"
+        "type": "trackday",
+        "track": "mettet",
+        "country": "belgium"
       },
       {
         "id": 4,
@@ -181,7 +187,9 @@
         "date": "27 juin 2025",
         "time": "9h00 - 18h00",
         "location": "Circuit de Clastres, France",
-        "type": "trackday"
+        "type": "trackday",
+        "track": "clastres",
+        "country": "france"
       },
       {
         "id": 5,
@@ -189,7 +197,9 @@
         "date": "20 août 2025",
         "time": "9h30 - 18h00",
         "location": "Circuit de Magny-Court, France",
-        "type": "trackday"
+        "type": "trackday",
+        "track": "magny-court",
+        "country": "france"     
       },
       {
         "id": 6,
@@ -197,7 +207,9 @@
         "date": "28 août 2025",
         "time": "9h00 - 18h00",
         "location": "Circuit de Clastres, France",
-        "type": "trackday"
+        "type": "trackday",
+        "track": "clastres",
+        "country": "france"
       },
       {
         "id": 7,
@@ -205,7 +217,9 @@
         "date": "18 septembre 2025",
         "time": "9h00 - 18h00",
         "location": "Circuit de Clastres, France",
-        "type": "trackday"
+        "type": "trackday",
+        "track": "clastres",
+        "country": "france"
       },
       {
         "id": 8,
@@ -213,7 +227,9 @@
         "date": "17 octobre 2025",
         "time": "9h30 - 18h00",
         "location": "Circuit de Zandvoort, Pays-Bas",
-        "type": "trackday"
+        "type": "trackday",
+        "track": "zandvoort",
+        "country": "netherlands"
       }
     ]
   },
